# eckel-stack

./: CMakeLists.txt
include/: stack.hpp
source/: main.cpp  stack.cpp
